Homologa el Conjunto de Evaluación (III)

--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "75c9b111",
    "metadata": {},
    "outputs": [
@@ -26,64 +26,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📁 DATA_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
-      "📁 FORK_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/Spanish_Psych_Phenotyping_PY\n",
-      "ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\n"
+      "✅ Utilizando utils_shared.py\n",
+      "✅ Paths configurados:\n",
+      "   BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
+      "   DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "   FORK_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/Spanish_Psych_Phenotyping_PY\n",
+      "   SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
    "source": [
-    "# === Paths / Globals (auto-detect) ===\n",
+    "# ===============================================================\n",
+    "# Setup: Paths, Imports, y Utilidades Compartidas\n",
+    "# ===============================================================\n",
+    "\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import re, unicodedata, os\n",
     "\n",
-    "# Rutas y entorno\n",
-    "BASE_PATH = Path.cwd()\n",
-    "if BASE_PATH.name == \"notebooks\":\n",
-    "    BASE_PATH = BASE_PATH.parent\n",
+    "# Intentar importar utilidades compartidas\n",
+    "try:\n",
+    "    import sys\n",
+    "    sys.path.insert(0, str(Path.cwd().parent))\n",
+    "    from utils_shared import setup_paths, guess_text_col, guess_label_col, normalize_label\n",
+    "    print(\"✅ Utilizando utils_shared.py\")\n",
+    "    \n",
+    "    # Setup de paths centralizado\n",
+    "    paths = setup_paths()\n",
+    "    BASE_PATH = paths['BASE_PATH']\n",
+    "    DATA_PATH = paths['DATA_PATH']\n",
+    "    FORK_PATH = paths['FORK_PATH']\n",
+    "    SPLITS_PATH = paths['SPLITS_PATH']\n",
+    "    \n",
+    "    # Usar funciones centralizadas\n",
+    "    _guess_text_col = guess_text_col\n",
+    "    _guess_label_col = guess_label_col\n",
+    "    _norm_label_bin = normalize_label\n",
+    "    \n",
+    "except ImportError:\n",
+    "    print(\"⚠️ utils_shared.py no encontrado, usando funciones locales\")\n",
+    "    \n",
+    "    # Setup manual de paths\n",
+    "    BASE_PATH = Path.cwd()\n",
+    "    if BASE_PATH.name == \"notebooks\":\n",
+    "        BASE_PATH = BASE_PATH.parent\n",
+    "    \n",
+    "    DATA_PATH = BASE_PATH / \"data\"\n",
+    "    FORK_PATH = BASE_PATH / \"Spanish_Psych_Phenotyping_PY\"\n",
+    "    SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "    \n",
+    "    DATA_PATH.mkdir(exist_ok=True)\n",
+    "    \n",
+    "    # Funciones helper locales\n",
+    "    def _guess_text_col(df):\n",
+    "        for c in [\"texto\", \"text\", \"comment\", \"comentario\"]:\n",
+    "            if c in df.columns:\n",
+    "                return c\n",
+    "        return df.columns[0]\n",
+    "    \n",
+    "    def _guess_label_col(df):\n",
+    "        for c in [\"etiqueta\", \"label\", \"category\"]:\n",
+    "            if c in df.columns:\n",
+    "                return c\n",
+    "        return df.columns[1] if len(df.columns) > 1 else df.columns[-1]\n",
+    "    \n",
+    "    def _norm_label_bin(s):\n",
+    "        if pd.isna(s): \n",
+    "            return \"\"\n",
+    "        s = str(s).strip().lower()\n",
+    "        s = unicodedata.normalize(\"NFKD\", s).encode(\"ascii\", \"ignore\").decode(\"ascii\")\n",
+    "        return {'depresivo': 'depresion'}.get(s, s)\n",
     "\n",
-    "DATA_PATH = BASE_PATH / \"data\"\n",
-    "FORK_PATH = BASE_PATH / \"Spanish_Psych_Phenotyping_PY\"\n",
+    "# Validar existencia de directorios críticos\n",
+    "if not FORK_PATH.exists():\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"❌ Fork no encontrado en {FORK_PATH}\\n\"\n",
+    "        f\"   Este baseline requiere Spanish_Psych_Phenotyping_PY/\"\n",
+    "    )\n",
     "\n",
-    "# Reuse existing globals if present (from your 02_baselines.ipynb)\n",
-    "DATA_PATH = Path(DATA_PATH) if 'DATA_PATH' in globals() else Path('data')\n",
-    "FORK_PATH = Path(FORK_PATH) if 'FORK_PATH' in globals() else Path('Spanish_Psych_Phenotyping_PY')\n",
-    "DATA_PATH.mkdir(exist_ok=True)\n",
+    "if not SPLITS_PATH.exists():\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"❌ Splits no encontrados en {SPLITS_PATH}\\n\"\n",
+    "        f\"   Debes ejecutar primero: 02_create_splits.ipynb\"\n",
+    "    )\n",
     "\n",
-    "print(\"📁 DATA_PATH:\", DATA_PATH)\n",
-    "print(\"📁 FORK_PATH:\", FORK_PATH)\n",
-    "print(\"ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\")\n",
+    "print(f\"✅ Paths configurados:\")\n",
+    "print(f\"   BASE_PATH:   {BASE_PATH}\")\n",
+    "print(f\"   DATA_PATH:   {DATA_PATH}\")\n",
+    "print(f\"   FORK_PATH:   {FORK_PATH}\")\n",
+    "print(f\"   SPLITS_PATH: {SPLITS_PATH}\")\n",
     "\n",
-    "# --- Columnas esperadas en dataset_base.csv ---\n",
+    "# Columnas esperadas en dataset_base.csv\n",
     "TEXT_COL = \"texto\"\n",
-    "LABEL_COL = \"etiqueta\"\n",
-    "\n",
-    "# Column preferences (honor globals if defined)\n",
-    "TEXT_COL  = TEXT_COL  if 'TEXT_COL'  in globals() else None\n",
-    "LABEL_COL = LABEL_COL if 'LABEL_COL' in globals() else None\n",
-    "\n",
-    "def _guess_text_col(df):\n",
-    "    if TEXT_COL and TEXT_COL in df.columns: \n",
-    "        return TEXT_COL\n",
-    "    for c in ['texto','Motivo Consulta','original_motivo_consulta','text']:\n",
-    "        if c in df.columns: return c\n",
-    "    for c in df.columns:\n",
-    "        if df[c].dtype == 'O': return c\n",
-    "    raise ValueError(\"No se encontró columna de texto.\")\n",
-    "\n",
-    "def _guess_label_col(df):\n",
-    "    if LABEL_COL and LABEL_COL in df.columns: \n",
-    "        return LABEL_COL\n",
-    "    for c in ['etiqueta','Tipo','label','target','y','clase']:\n",
-    "        if c in df.columns: return c\n",
-    "    return None\n",
-    "\n",
-    "def _norm_label_bin(s):\n",
-    "    if pd.isna(s): return \"\"\n",
-    "    s = str(s).strip().lower()\n",
-    "    s = unicodedata.normalize(\"NFKD\", s).encode(\"ascii\",\"ignore\").decode(\"ascii\")\n",
-    "    return {'depresivo':'depresion'}.get(s, s)\n"
+    "LABEL_COL = \"etiqueta\""
    ]
   },
   {
@@ -96,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -104,62 +139,140 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados: Train=2500 | Val=625\n",
-      "Train distribución:\n",
-      "etiqueta\n",
-      "depresion    1760\n",
-      "ansiedad      740\n",
-      "Name: count, dtype: int64\n",
-      "Val distribución:\n",
-      "etiqueta\n",
-      "depresion    440\n",
-      "ansiedad     185\n",
-      "Name: count, dtype: int64\n",
-      "Train distribución:\n",
-      "etiqueta\n",
-      "depresion    1760\n",
-      "ansiedad      740\n",
-      "Name: count, dtype: int64\n",
-      "Val distribución:\n",
-      "etiqueta\n",
-      "depresion    440\n",
-      "ansiedad     185\n",
-      "Name: count, dtype: int64\n"
+      "✅ Splits cargados desde /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/:\n",
+      "   Train: 2500 ejemplos\n",
+      "   Val:   626 ejemplos\n",
+      "   Total: 3126 ejemplos en dataset_base.csv\n",
+      "\n",
+      "📋 Columnas detectadas: texto='texto', label='etiqueta'\n",
+      "\n",
+      "🧹 Aplicado preprocesamiento ligero (conserva tildes/mayúsculas)\n",
+      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "\n",
+      "📊 Splits creados:\n",
+      "\n",
+      "Train (2500 ejemplos):\n",
+      "   depresion: 1760\n",
+      "   ansiedad: 740\n",
+      "\n",
+      "Val (626 ejemplos):\n",
+      "   depresion: 441\n",
+      "   ansiedad: 185\n",
+      "\n",
+      "🧹 Aplicado preprocesamiento ligero (conserva tildes/mayúsculas)\n",
+      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "\n",
+      "📊 Splits creados:\n",
+      "\n",
+      "Train (2500 ejemplos):\n",
+      "   depresion: 1760\n",
+      "   ansiedad: 740\n",
+      "\n",
+      "Val (626 ejemplos):\n",
+      "   depresion: 441\n",
+      "   ansiedad: 185\n"
      ]
     }
    ],
    "source": [
+    "# ===============================================================\n",
+    "# Carga de Datos y Preprocesamiento LIGERO (Rule-Based)\n",
+    "# ===============================================================\n",
+    "#\n",
+    "# ESTRATEGIA DE PREPROCESAMIENTO: CONSERVADORA (mínimo)\n",
+    "#\n",
+    "# ¿Por qué preprocesamiento ligero?\n",
+    "#\n",
+    "# 1. **Preserva tildes y mayúsculas**:\n",
+    "#    - Los patrones JSON del fork usan \"Depresión\", \"Ansiedad\" con tildes\n",
+    "#    - ConText y TargetMatcher son case-sensitive en algunos contextos\n",
+    "#    - Normalizar agresivamente = romper el matching de patrones\n",
+    "#\n",
+    "# 2. **Solo colapsa alargamientos**:\n",
+    "#    - \"holaaa\" → \"holaa\" (mantiene énfasis sin perder matching)\n",
+    "#    - Usuarios escriben \"estabaaa tristeee\" con múltiples letras\n",
+    "#    - Patrones no capturan \"tristeeeee\" pero sí \"tristee\"\n",
+    "#\n",
+    "# 3. **Normaliza espacios**:\n",
+    "#    - Colapsa múltiples espacios en uno solo\n",
+    "#    - Elimina espacios al inicio/final\n",
+    "#    - No afecta matching pero limpia entrada\n",
+    "#\n",
+    "# ¿Qué NO hace este preprocesamiento?\n",
+    "# - ❌ No convierte a minúsculas (rompe patrones)\n",
+    "# - ❌ No elimina tildes/acentos (rompe patrones)\n",
+    "# - ❌ No elimina puntuación (ConText la usa)\n",
+    "# - ❌ No hace stemming/lemmatización (no necesario para reglas)\n",
+    "#\n",
+    "# Comparación con otros baselines:\n",
+    "# - TF-IDF: Preprocesamiento agresivo (lowercase, sin tildes, sin puntuación)\n",
+    "# - BETO: Solo tokenización (el modelo maneja mayúsculas/tildes)\n",
+    "# - Rule-Based: Conservador (preserva estructura original)\n",
+    "#\n",
+    "# ===============================================================\n",
+    "\n",
     "import pandas as pd, re, unicodedata\n",
     "\n",
-    "# === CARGAR SPLITS UNIFICADOS ===\n",
-    "SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
     "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
     "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "print(f\"✅ Splits cargados: Train={len(train_indices)} | Val={len(val_indices)}\")\n",
+    "print(f\"✅ Splits cargados desde {SPLITS_PATH}/:\")\n",
+    "print(f\"   Train: {len(train_indices)} ejemplos\")\n",
+    "print(f\"   Val:   {len(val_indices)} ejemplos\")\n",
+    "print(f\"   Total: {len(dataset_base)} ejemplos en dataset_base.csv\")\n",
     "\n",
-    "text_col  = _guess_text_col(dataset_base)\n",
+    "# Detectar columnas automáticamente\n",
+    "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
+    "print(f\"\\n📋 Columnas detectadas: texto='{text_col}', label='{label_col}'\")\n",
     "\n",
-    "# Preprocesamiento ligero para rule-based (conserva tildes/casing, colapsa alargamientos)\n",
-    "_RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
+    "# Definir función de limpieza ligera\n",
+    "_RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
+    "\n",
     "def clean_text_rb(s: str) -> str:\n",
-    "    if pd.isna(s): return \"\"\n",
+    "    \"\"\"\n",
+    "    Limpieza LIGERA para rule-based (conserva estructura original).\n",
+    "    \n",
+    "    Aplica solo:\n",
+    "    - Normalización NFC (forma canónica de tildes)\n",
+    "    - Colapso de alargamientos (holaaa → holaa)\n",
+    "    - Normalización de espacios\n",
+    "    \"\"\"\n",
+    "    if pd.isna(s):\n",
+    "        return \"\"\n",
+    "    \n",
     "    s = str(s).strip()\n",
-    "    s = unicodedata.normalize(\"NFC\", s)\n",
-    "    s = _RE_MULTI.sub(r'\\1\\1', s)\n",
-    "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
+    "    s = unicodedata.normalize(\"NFC\", s)  # Normaliza tildes (é = é, no e + ´)\n",
+    "    s = _RE_MULTI.sub(r'\\1\\1', s)        # holaaa → holaa (mantiene énfasis)\n",
+    "    s = re.sub(r\"\\s+\", \" \", s).strip()   # Colapsa espacios múltiples\n",
+    "    \n",
     "    return s\n",
     "\n",
+    "# Aplicar limpieza ligera\n",
     "dataset_base['texto_rb'] = dataset_base[text_col].map(clean_text_rb)\n",
+    "\n",
+    "print(f\"\\n🧹 Aplicado preprocesamiento ligero (conserva tildes/mayúsculas)\")\n",
+    "print(f\"   Ejemplo antes: {dataset_base[text_col].iloc[0][:80]}...\")\n",
+    "print(f\"   Ejemplo después: {dataset_base['texto_rb'].iloc[0][:80]}...\")\n",
     "\n",
     "# Separar train y val usando índices guardados\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
     "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
-    "print(f\"Train distribución:\\n{df_train[label_col].value_counts()}\")\n",
-    "print(f\"Val distribución:\\n{df_val[label_col].value_counts()}\")"
+    "print(f\"\\n📊 Splits creados:\")\n",
+    "print(f\"\\nTrain ({len(df_train)} ejemplos):\")\n",
+    "train_dist = df_train[label_col].value_counts()\n",
+    "for label, count in train_dist.items():\n",
+    "    print(f\"   {label}: {count}\")\n",
+    "\n",
+    "print(f\"\\nVal ({len(df_val)} ejemplos):\")\n",
+    "val_dist = df_val[label_col].value_counts()\n",
+    "for label, count in val_dist.items():\n",
+    "    print(f\"   {label}: {count}\")"
    ]
   },
   {
@@ -172,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "0b09ee4c",
    "metadata": {},
    "outputs": [
@@ -192,7 +305,7 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=625\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=626\n",
       "\n",
       "Components in NLP pipeline:\n",
       "\t- tok2vec\n",
@@ -205,7 +318,7 @@
       "Concepts included (by folder): Ansiedad, Depresion\n",
       "Rule categories loaded: Abulia, Abusodesustancias, Agitacinpsicomotora, Alteracindelapercepcindepesoofiguracorporal, AngustiaMiedoTemor, Anhedonia, Animodeprimido, Animoexpansivo, Ansiedad, Apata, Apetitoaumentode, Apetitodisminucinde, Autolesin, Bajaconcentracin, Bajaenerga, Culpa, Desesperanza, Efectosadversos, Fatiga, Ideacinsuicida, Ideasdemuerte, Intentosuicida, Irritabilidad, Labilidademocional, Llantofcil, Malahigienepersonal, Negativismo, RetraimientosocialAislamiento, Retrasopsicomotor, Sntomasafectivos, Sntomasansiososgenerales, Sntomasdepresivosgenerales, SntomassomticosEjemplos\n",
       "Total target rules added: 229\n",
-      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=625\n",
+      "✅ Guardado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv  | filas=626\n",
       "\n"
      ]
     }
@@ -267,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "84dbc18f",
    "metadata": {},
    "outputs": [
