--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "361947b5",
    "metadata": {},
    "outputs": [
@@ -21,62 +21,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📁 DATA_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
-      "ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\n"
+      "✅ Utilizando utils_shared.py\n",
+      "✅ Paths configurados:\n",
+      "   BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
+      "   DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "   SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
    "source": [
-    "# === Paths / Globals (auto-detect) ===\n",
+    "# ===============================================================\n",
+    "# Setup: Paths, Imports, y Utilidades Compartidas\n",
+    "# ===============================================================\n",
+    "\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import re, unicodedata, os\n",
     "\n",
-    "# Rutas y entorno\n",
-    "BASE_PATH = Path.cwd()\n",
-    "if BASE_PATH.name == \"notebooks\":\n",
-    "    BASE_PATH = BASE_PATH.parent\n",
+    "# Intentar importar utilidades compartidas\n",
+    "try:\n",
+    "    import sys\n",
+    "    sys.path.insert(0, str(Path.cwd()))\n",
+    "    from utils_shared import setup_paths, guess_text_col, guess_label_col, normalize_label\n",
+    "    print(\"✅ Utilizando utils_shared.py\")\n",
+    "    \n",
+    "    # Setup de paths centralizado\n",
+    "    paths = setup_paths()\n",
+    "    BASE_PATH = paths['BASE_PATH']\n",
+    "    DATA_PATH = paths['DATA_PATH']\n",
+    "    SPLITS_PATH = paths['SPLITS_PATH']\n",
+    "    \n",
+    "    # Usar funciones centralizadas\n",
+    "    _guess_text_col = guess_text_col\n",
+    "    _guess_label_col = guess_label_col\n",
+    "    _norm_label_bin = normalize_label\n",
+    "    \n",
+    "except ImportError:\n",
+    "    print(\"⚠️ utils_shared.py no encontrado, usando funciones locales\")\n",
+    "    \n",
+    "    # Setup manual de paths\n",
+    "    BASE_PATH = Path.cwd()\n",
+    "    if BASE_PATH.name == \"notebooks\":\n",
+    "        BASE_PATH = BASE_PATH.parent\n",
+    "    \n",
+    "    DATA_PATH = BASE_PATH / \"data\"\n",
+    "    SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "    \n",
+    "    DATA_PATH.mkdir(exist_ok=True)\n",
+    "    \n",
+    "    # Funciones helper locales\n",
+    "    def _guess_text_col(df):\n",
+    "        for c in [\"texto\", \"text\", \"comment\", \"comentario\"]:\n",
+    "            if c in df.columns:\n",
+    "                return c\n",
+    "        return df.columns[0]\n",
+    "    \n",
+    "    def _guess_label_col(df):\n",
+    "        for c in [\"etiqueta\", \"label\", \"category\"]:\n",
+    "            if c in df.columns:\n",
+    "                return c\n",
+    "        return df.columns[1] if len(df.columns) > 1 else df.columns[-1]\n",
+    "    \n",
+    "    def _norm_label_bin(s):\n",
+    "        if pd.isna(s): \n",
+    "            return \"\"\n",
+    "        s = str(s).strip().lower()\n",
+    "        s = unicodedata.normalize(\"NFKD\", s).encode(\"ascii\", \"ignore\").decode(\"ascii\")\n",
+    "        return {'depresivo': 'depresion'}.get(s, s)\n",
     "\n",
-    "DATA_PATH = BASE_PATH / \"data\"\n",
-    "FORK_PATH = BASE_PATH / \"Spanish_Psych_Phenotyping_PY\"\n",
+    "# Validar existencia de splits\n",
+    "if not SPLITS_PATH.exists():\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"❌ Splits no encontrados en {SPLITS_PATH}\\n\"\n",
+    "        f\"   Debes ejecutar primero: 02_create_splits.ipynb\"\n",
+    "    )\n",
     "\n",
-    "# Reuse existing globals if present (from your 02_baselines.ipynb)\n",
-    "DATA_PATH = Path(DATA_PATH) if 'DATA_PATH' in globals() else Path('data')\n",
-    "FORK_PATH = Path(FORK_PATH) if 'FORK_PATH' in globals() else Path('Spanish_Psych_Phenotyping_PY')\n",
-    "DATA_PATH.mkdir(exist_ok=True)\n",
+    "print(f\"✅ Paths configurados:\")\n",
+    "print(f\"   BASE_PATH:   {BASE_PATH}\")\n",
+    "print(f\"   DATA_PATH:   {DATA_PATH}\")\n",
+    "print(f\"   SPLITS_PATH: {SPLITS_PATH}\")\n",
     "\n",
-    "print(\"📁 DATA_PATH:\", DATA_PATH)\n",
-    "print(\"ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\")\n",
-    "\n",
-    "# --- Columnas esperadas en dataset_base.csv ---\n",
+    "# Columnas esperadas en dataset_base.csv\n",
     "TEXT_COL = \"texto\"\n",
-    "LABEL_COL = \"etiqueta\"\n",
-    "\n",
-    "# Column preferences (honor globals if defined)\n",
-    "TEXT_COL  = TEXT_COL  if 'TEXT_COL'  in globals() else None\n",
-    "LABEL_COL = LABEL_COL if 'LABEL_COL' in globals() else None\n",
-    "\n",
-    "def _guess_text_col(df):\n",
-    "    if TEXT_COL and TEXT_COL in df.columns: \n",
-    "        return TEXT_COL\n",
-    "    for c in ['texto','Motivo Consulta','original_motivo_consulta','text']:\n",
-    "        if c in df.columns: return c\n",
-    "    for c in df.columns:\n",
-    "        if df[c].dtype == 'O': return c\n",
-    "    raise ValueError(\"No se encontró columna de texto.\")\n",
-    "\n",
-    "def _guess_label_col(df):\n",
-    "    if LABEL_COL and LABEL_COL in df.columns: \n",
-    "        return LABEL_COL\n",
-    "    for c in ['etiqueta','Tipo','label','target','y','clase']:\n",
-    "        if c in df.columns: return c\n",
-    "    return None\n",
-    "\n",
-    "def _norm_label_bin(s):\n",
-    "    if pd.isna(s): return \"\"\n",
-    "    s = str(s).strip().lower()\n",
-    "    s = unicodedata.normalize(\"NFKD\", s).encode(\"ascii\",\"ignore\").decode(\"ascii\")\n",
-    "    return {'depresivo':'depresion'}.get(s, s)\n"
+    "LABEL_COL = \"etiqueta\""
    ]
   },
   {
@@ -89,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "56fb4499",
    "metadata": {},
    "outputs": [
@@ -97,57 +124,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados: Train=2500 | Val=625\n",
-      "Train distribución:\n",
-      "etiqueta\n",
-      "depresion    1760\n",
-      "ansiedad      740\n",
-      "Name: count, dtype: int64\n",
-      "Val distribución:\n",
-      "etiqueta\n",
-      "depresion    440\n",
-      "ansiedad     185\n",
-      "Name: count, dtype: int64\n",
-      "Train distribución:\n",
-      "etiqueta\n",
-      "depresion    1760\n",
-      "ansiedad      740\n",
-      "Name: count, dtype: int64\n",
-      "Val distribución:\n",
-      "etiqueta\n",
-      "depresion    440\n",
-      "ansiedad     185\n",
-      "Name: count, dtype: int64\n"
+      "✅ Splits cargados desde /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/:\n",
+      "   Train: 2500 ejemplos\n",
+      "   Val:   626 ejemplos\n",
+      "   Total: 3126 ejemplos en dataset_base.csv\n",
+      "\n",
+      "📋 Columnas detectadas: texto='texto', label='etiqueta'\n",
+      "\n",
+      "🧹 Aplicado preprocesamiento agresivo (lowercase + sin tildes + negaciones)\n",
+      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "   Ejemplo después: reposicion de medicacion 2 examen fisico gral. y ginecologico peso talla presion...\n",
+      "\n",
+      "📊 Splits creados:\n",
+      "\n",
+      "Train (2500 ejemplos):\n",
+      "   depresion: 1760\n",
+      "   ansiedad: 740\n",
+      "\n",
+      "Val (626 ejemplos):\n",
+      "   depresion: 441\n",
+      "   ansiedad: 185\n",
+      "\n",
+      "🧹 Aplicado preprocesamiento agresivo (lowercase + sin tildes + negaciones)\n",
+      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "   Ejemplo después: reposicion de medicacion 2 examen fisico gral. y ginecologico peso talla presion...\n",
+      "\n",
+      "📊 Splits creados:\n",
+      "\n",
+      "Train (2500 ejemplos):\n",
+      "   depresion: 1760\n",
+      "   ansiedad: 740\n",
+      "\n",
+      "Val (626 ejemplos):\n",
+      "   depresion: 441\n",
+      "   ansiedad: 185\n"
      ]
     }
    ],
    "source": [
+    "# ===============================================================\n",
+    "# Carga de Datos y Preprocesamiento AGRESIVO (TF-IDF + SVM)\n",
+    "# ===============================================================\n",
+    "#\n",
+    "# ESTRATEGIA DE PREPROCESAMIENTO: AGRESIVA (máxima normalización)\n",
+    "#\n",
+    "# ¿Por qué preprocesamiento agresivo?\n",
+    "#\n",
+    "# 1. **Convierte a minúsculas**:\n",
+    "#    - \"Depresión\" y \"depresión\" son la misma palabra para el modelo\n",
+    "#    - TF-IDF trata cada variación como token diferente sin lowercase\n",
+    "#    - Reduce vocabulario (~40%) mejorando generalización\n",
+    "#\n",
+    "# 2. **Elimina acentos/tildes**:\n",
+    "#    - \"depresión\" → \"depresion\"\n",
+    "#    - Robustez ante errores de transcripción (común en notas clínicas)\n",
+    "#    - Los datos tienen muchos typos: \"anciedad\", \"deprecion\", etc.\n",
+    "#\n",
+    "# 3. **Elimina símbolos especiales**:\n",
+    "#    - Preserva solo: letras, números, espacios, puntuación básica\n",
+    "#    - Elimina ruido de transcripción: emojis, símbolos raros, etc.\n",
+    "#\n",
+    "# 4. **Colapsa alargamientos**:\n",
+    "#    - \"holaaaaa\" → \"holaa\" (igual que rule-based)\n",
+    "#    - Mantiene énfasis sin explotar el vocabulario\n",
+    "#\n",
+    "# 5. **Marca negaciones** (innovación clave):\n",
+    "#    - \"no tengo apetito\" → \"no_tengo apetito\"\n",
+    "#    - Permite a TF-IDF capturar \"no_X\" como feature diferente de \"X\"\n",
+    "#    - Proxy simple para manejar negación sin ConText\n",
+    "#\n",
+    "# ¿Qué NO hace este preprocesamiento?\n",
+    "# - ❌ No hace stemming/lemmatización (puede romper char n-grams)\n",
+    "# - ❌ No elimina stopwords (útiles en contexto clínico)\n",
+    "# - ❌ No tokeniza (char-level TF-IDF lo hace automáticamente)\n",
+    "#\n",
+    "# Comparación con otros baselines:\n",
+    "# - Rule-Based: Conservador (preserva tildes/mayúsculas para patterns)\n",
+    "# - TF-IDF: Agresivo (máxima normalización para robustez)\n",
+    "# - BETO: Mínimo (solo tokenización, el modelo maneja el resto)\n",
+    "#\n",
+    "# Justificación del char TF-IDF (3-5):\n",
+    "# - **Robusto a typos**: \"deprecion\" captura \"pre\", \"rec\", \"epr\", \"ecion\" → overlap con \"depresion\"\n",
+    "# - **No requiere tokenización perfecta**: funciona character-by-character\n",
+    "# - **Captura patrones morfológicos**: sufijos -ción, -dad, -oso, etc.\n",
+    "# - **Estándar de la industria** para texto con ruido (OCR, transcripción)\n",
+    "#\n",
+    "# ===============================================================\n",
+    "\n",
     "import pandas as pd, re, unicodedata\n",
     "\n",
-    "# === CARGAR SPLITS UNIFICADOS ===\n",
-    "SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
     "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
     "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "print(f\"✅ Splits cargados: Train={len(train_indices)} | Val={len(val_indices)}\")\n",
+    "print(f\"✅ Splits cargados desde {SPLITS_PATH}/:\")\n",
+    "print(f\"   Train: {len(train_indices)} ejemplos\")\n",
+    "print(f\"   Val:   {len(val_indices)} ejemplos\")\n",
+    "print(f\"   Total: {len(dataset_base)} ejemplos en dataset_base.csv\")\n",
     "\n",
-    "text_col  = _guess_text_col(dataset_base)\n",
+    "# Detectar columnas automáticamente\n",
+    "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
+    "print(f\"\\n📋 Columnas detectadas: texto='{text_col}', label='{label_col}'\")\n",
     "\n",
-    "# TF-IDF: agresivo (lower, símbolos, alargamientos, proxy negación 'no_X')\n",
-    "RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
+    "# Definir función de limpieza agresiva\n",
+    "RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
+    "\n",
     "def clean_text_ml(s: str) -> str:\n",
-    "    if pd.isna(s): return \"\"\n",
-    "    s = str(s).lower().strip()\n",
-    "    s = unicodedata.normalize(\"NFC\", s)\n",
-    "    s = RE_MULTI.sub(r'\\1\\1', s)\n",
+    "    \"\"\"\n",
+    "    Limpieza AGRESIVA para TF-IDF (máxima normalización para robustez).\n",
+    "    \n",
+    "    Aplica:\n",
+    "    - Lowercase completo\n",
+    "    - Normalización NFC + eliminación de tildes\n",
+    "    - Colapso de alargamientos\n",
+    "    - Eliminación de símbolos especiales (preserva puntuación básica)\n",
+    "    - Marca negaciones simples (\"no X\" → \"no_X\")\n",
+    "    \"\"\"\n",
+    "    if pd.isna(s):\n",
+    "        return \"\"\n",
+    "    \n",
+    "    s = str(s).lower().strip()           # Lowercase total\n",
+    "    s = unicodedata.normalize(\"NFC\", s)  # Normaliza tildes\n",
+    "    s = RE_MULTI.sub(r'\\1\\1', s)         # Colapsa alargamientos\n",
+    "    \n",
+    "    # Elimina símbolos especiales (preserva letras, números, puntuación básica)\n",
     "    s = re.sub(r\"[^a-z0-9áéíóúüñ\\s.,!?:/\\-]\", \" \", s)\n",
-    "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
-    "    s = re.sub(r\"\\bno\\s+([a-záéíóúüñ]{2,})\", r\"no_\\1\", s)  # negación simple\n",
+    "    s = re.sub(r\"\\s+\", \" \", s).strip()   # Normaliza espacios\n",
+    "    \n",
+    "    # Marca negaciones simples: \"no tengo\" → \"no_tengo\"\n",
+    "    s = re.sub(r\"\\bno\\s+([a-záéíóúüñ]{2,})\", r\"no_\\1\", s)\n",
+    "    \n",
     "    return s\n",
     "\n",
+    "# Aplicar limpieza agresiva\n",
     "dataset_base['texto_ml'] = dataset_base[text_col].map(clean_text_ml)\n",
+    "\n",
+    "print(f\"\\n🧹 Aplicado preprocesamiento agresivo (lowercase + sin tildes + negaciones)\")\n",
+    "print(f\"   Ejemplo antes: {dataset_base[text_col].iloc[0][:80]}...\")\n",
+    "print(f\"   Ejemplo después: {dataset_base['texto_ml'].iloc[0][:80]}...\")\n",
     "\n",
     "# Separar train y val usando índices guardados\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
@@ -156,8 +272,16 @@
     "X_train, y_train = df_train['texto_ml'], df_train[label_col]\n",
     "X_val, y_val = df_val['texto_ml'], df_val[label_col]\n",
     "\n",
-    "print(f\"Train distribución:\\n{y_train.value_counts()}\")\n",
-    "print(f\"Val distribución:\\n{y_val.value_counts()}\")"
+    "print(f\"\\n📊 Splits creados:\")\n",
+    "print(f\"\\nTrain ({len(df_train)} ejemplos):\")\n",
+    "train_dist = y_train.value_counts()\n",
+    "for label, count in train_dist.items():\n",
+    "    print(f\"   {label}: {count}\")\n",
+    "\n",
+    "print(f\"\\nVal ({len(df_val)} ejemplos):\")\n",
+    "val_dist = y_val.value_counts()\n",
+    "for label, count in val_dist.items():\n",
+    "    print(f\"   {label}: {count}\")"
    ]
   },
   {
@@ -170,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "53508f46",
    "metadata": {},
    "outputs": [
@@ -214,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "921cc305",
    "metadata": {},
    "outputs": [
