--- a/notebooks/02_baseline_transformer_beto.ipynb
+++ b/notebooks/02_baseline_transformer_beto.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "3bb438c5",
    "metadata": {},
    "outputs": [
@@ -21,62 +21,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📁 DATA_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
-      "ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\n"
+      "✅ Utilizando utils_shared.py\n",
+      "✅ Paths configurados:\n",
+      "   BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
+      "   DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "   SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
    "source": [
-    "# === Paths / Globals (auto-detect) ===\n",
+    "# ===============================================================\n",
+    "# Setup: Paths, Imports, y Utilidades Compartidas\n",
+    "# ===============================================================\n",
+    "\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import re, unicodedata, os\n",
     "\n",
-    "# Rutas y entorno\n",
-    "BASE_PATH = Path.cwd()\n",
-    "if BASE_PATH.name == \"notebooks\":\n",
-    "    BASE_PATH = BASE_PATH.parent\n",
+    "# Intentar importar utilidades compartidas\n",
+    "try:\n",
+    "    import sys\n",
+    "    sys.path.insert(0, str(Path.cwd()))\n",
+    "    from utils_shared import setup_paths, guess_text_col, guess_label_col, normalize_label\n",
+    "    print(\"✅ Utilizando utils_shared.py\")\n",
+    "    \n",
+    "    # Setup de paths centralizado\n",
+    "    paths = setup_paths()\n",
+    "    BASE_PATH = paths['BASE_PATH']\n",
+    "    DATA_PATH = paths['DATA_PATH']\n",
+    "    SPLITS_PATH = paths['SPLITS_PATH']\n",
+    "    \n",
+    "    # Usar funciones centralizadas\n",
+    "    _guess_text_col = guess_text_col\n",
+    "    _guess_label_col = guess_label_col\n",
+    "    _norm_label_bin = normalize_label\n",
+    "    \n",
+    "except ImportError:\n",
+    "    print(\"⚠️ utils_shared.py no encontrado, usando funciones locales\")\n",
+    "    \n",
+    "    # Setup manual de paths\n",
+    "    BASE_PATH = Path.cwd()\n",
+    "    if BASE_PATH.name == \"notebooks\":\n",
+    "        BASE_PATH = BASE_PATH.parent\n",
+    "    \n",
+    "    DATA_PATH = BASE_PATH / \"data\"\n",
+    "    SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "    \n",
+    "    DATA_PATH.mkdir(exist_ok=True)\n",
+    "    \n",
+    "    # Funciones helper locales\n",
+    "    def _guess_text_col(df):\n",
+    "        for c in [\"texto\", \"text\", \"comment\", \"comentario\"]:\n",
+    "            if c in df.columns:\n",
+    "                return c\n",
+    "        return df.columns[0]\n",
+    "    \n",
+    "    def _guess_label_col(df):\n",
+    "        for c in [\"etiqueta\", \"label\", \"category\"]:\n",
+    "            if c in df.columns:\n",
+    "                return c\n",
+    "        return df.columns[1] if len(df.columns) > 1 else df.columns[-1]\n",
+    "    \n",
+    "    def _norm_label_bin(s):\n",
+    "        if pd.isna(s): \n",
+    "            return \"\"\n",
+    "        s = str(s).strip().lower()\n",
+    "        s = unicodedata.normalize(\"NFKD\", s).encode(\"ascii\", \"ignore\").decode(\"ascii\")\n",
+    "        return {'depresivo': 'depresion'}.get(s, s)\n",
     "\n",
-    "DATA_PATH = BASE_PATH / \"data\"\n",
-    "FORK_PATH = BASE_PATH / \"Spanish_Psych_Phenotyping_PY\"\n",
+    "# Validar existencia de splits\n",
+    "if not SPLITS_PATH.exists():\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"❌ Splits no encontrados en {SPLITS_PATH}\\n\"\n",
+    "        f\"   Debes ejecutar primero: 02_create_splits.ipynb\"\n",
+    "    )\n",
     "\n",
-    "# Reuse existing globals if present (from your 02_baselines.ipynb)\n",
-    "DATA_PATH = Path(DATA_PATH) if 'DATA_PATH' in globals() else Path('data')\n",
-    "FORK_PATH = Path(FORK_PATH) if 'FORK_PATH' in globals() else Path('Spanish_Psych_Phenotyping_PY')\n",
-    "DATA_PATH.mkdir(exist_ok=True)\n",
+    "print(f\"✅ Paths configurados:\")\n",
+    "print(f\"   BASE_PATH:   {BASE_PATH}\")\n",
+    "print(f\"   DATA_PATH:   {DATA_PATH}\")\n",
+    "print(f\"   SPLITS_PATH: {SPLITS_PATH}\")\n",
     "\n",
-    "print(\"📁 DATA_PATH:\", DATA_PATH)\n",
-    "print(\"ℹ️  Este baseline carga datos desde data/splits/ (generados por 02_create_splits.ipynb)\")\n",
-    "\n",
-    "# --- Columnas esperadas en dataset_base.csv ---\n",
+    "# Columnas esperadas en dataset_base.csv\n",
     "TEXT_COL = \"texto\"\n",
-    "LABEL_COL = \"etiqueta\"\n",
-    "\n",
-    "# Column preferences (honor globals if defined)\n",
-    "TEXT_COL  = TEXT_COL  if 'TEXT_COL'  in globals() else None\n",
-    "LABEL_COL = LABEL_COL if 'LABEL_COL' in globals() else None\n",
-    "\n",
-    "def _guess_text_col(df):\n",
-    "    if TEXT_COL and TEXT_COL in df.columns: \n",
-    "        return TEXT_COL\n",
-    "    for c in ['texto','Motivo Consulta','original_motivo_consulta','text']:\n",
-    "        if c in df.columns: return c\n",
-    "    for c in df.columns:\n",
-    "        if df[c].dtype == 'O': return c\n",
-    "    raise ValueError(\"No se encontró columna de texto.\")\n",
-    "\n",
-    "def _guess_label_col(df):\n",
-    "    if LABEL_COL and LABEL_COL in df.columns: \n",
-    "        return LABEL_COL\n",
-    "    for c in ['etiqueta','Tipo','label','target','y','clase']:\n",
-    "        if c in df.columns: return c\n",
-    "    return None\n",
-    "\n",
-    "def _norm_label_bin(s):\n",
-    "    if pd.isna(s): return \"\"\n",
-    "    s = str(s).strip().lower()\n",
-    "    s = unicodedata.normalize(\"NFKD\", s).encode(\"ascii\",\"ignore\").decode(\"ascii\")\n",
-    "    return {'depresivo':'depresion'}.get(s, s)\n"
+    "LABEL_COL = \"etiqueta\""
    ]
   },
   {
@@ -89,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a7a50745",
    "metadata": {},
    "outputs": [
@@ -97,67 +124,165 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados: Train=2500 | Val=625\n",
-      "Train: 2500 | Val: 625\n",
-      "Train distribución:\n",
-      "label\n",
-      "0    1760\n",
-      "1     740\n",
-      "Name: count, dtype: int64\n",
-      "Val distribución:\n",
-      "label\n",
-      "0    440\n",
-      "1    185\n",
-      "Name: count, dtype: int64\n",
-      "Train: 2500 | Val: 625\n",
-      "Train distribución:\n",
-      "label\n",
-      "0    1760\n",
-      "1     740\n",
-      "Name: count, dtype: int64\n",
-      "Val distribución:\n",
-      "label\n",
-      "0    440\n",
-      "1    185\n",
-      "Name: count, dtype: int64\n"
+      "✅ Splits cargados desde /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/:\n",
+      "   Train: 2500 ejemplos\n",
+      "   Val:   626 ejemplos\n",
+      "   Total: 3126 ejemplos en dataset_base.csv\n",
+      "\n",
+      "📋 Columnas detectadas: texto='texto', label='etiqueta'\n",
+      "\n",
+      "🧹 Aplicado preprocesamiento conservador (preserva tildes/mayúsculas/puntuación)\n",
+      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "\n",
+      "📊 Splits creados:\n",
+      "\n",
+      "Train (2500 ejemplos):\n",
+      "   depresion: 1760\n",
+      "   ansiedad: 740\n",
+      "\n",
+      "Val (626 ejemplos):\n",
+      "   depresion: 441\n",
+      "   ansiedad: 185\n",
+      "\n",
+      "🧹 Aplicado preprocesamiento conservador (preserva tildes/mayúsculas/puntuación)\n",
+      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
+      "\n",
+      "📊 Splits creados:\n",
+      "\n",
+      "Train (2500 ejemplos):\n",
+      "   depresion: 1760\n",
+      "   ansiedad: 740\n",
+      "\n",
+      "Val (626 ejemplos):\n",
+      "   depresion: 441\n",
+      "   ansiedad: 185\n"
      ]
     }
    ],
    "source": [
+    "# ===============================================================\n",
+    "# Carga de Datos y Preprocesamiento CONSERVADOR (BETO/Transformer)\n",
+    "# ===============================================================\n",
+    "#\n",
+    "# ESTRATEGIA DE PREPROCESAMIENTO: CONSERVADORA (mínimo)\n",
+    "#\n",
+    "# ¿Por qué preprocesamiento conservador/mínimo?\n",
+    "#\n",
+    "# 1. **Los transformers están preentrenados con texto \"natural\"**:\n",
+    "#    - BETO/RoBERTa se entrenaron con Wikipedia, noticias, web en español\n",
+    "#    - Ese texto tiene mayúsculas, tildes, puntuación original\n",
+    "#    - Normalizar agresivamente = salirse de la distribución de entrenamiento\n",
+    "#\n",
+    "# 2. **Tokenización BPE maneja variaciones**:\n",
+    "#    - \"Depresión\" y \"depresión\" → mismo subtokens (el tokenizer lo normaliza)\n",
+    "#    - El modelo aprende equivalencias durante el pretraining\n",
+    "#    - No necesitamos lowercase manual\n",
+    "#\n",
+    "# 3. **Embeddings contextuales capturan semántica**:\n",
+    "#    - BETO entiende \"no tengo apetito\" vs \"tengo apetito\" sin marcadores\n",
+    "#    - La atención captura negación implícitamente\n",
+    "#    - No necesitamos heurísticas como \"no_X\"\n",
+    "#\n",
+    "# 4. **Solo limpieza de ruido obvio**:\n",
+    "#    - Alargamientos (\"holaaa\" → \"holaa\") para evitar OOV\n",
+    "#    - Espacios múltiples por consistencia\n",
+    "#    - NFC para normalizar forma canónica de tildes\n",
+    "#\n",
+    "# ¿Qué NO hace este preprocesamiento?\n",
+    "# - ❌ No convierte a minúsculas (el modelo lo maneja)\n",
+    "# - ❌ No elimina tildes/acentos (parte del vocabulario)\n",
+    "# - ❌ No elimina puntuación (señal contextual importante)\n",
+    "# - ❌ No marca negaciones (BETO lo aprende solo)\n",
+    "# - ❌ No hace stemming/lemmatización (no es necesario con embeddings)\n",
+    "#\n",
+    "# Comparación con otros baselines:\n",
+    "# - Rule-Based: Conservador (preserva estructura para patterns)\n",
+    "# - TF-IDF: Agresivo (normalización máxima para robustez)\n",
+    "# - BETO: Conservador (preserva distribución del pretraining)\n",
+    "#\n",
+    "# Justificación técnica:\n",
+    "# - BETO usa WordPiece tokenization con vocabulario de 31K tokens\n",
+    "# - Incluye mayúsculas, minúsculas, tildes en el vocabulario\n",
+    "# - Fine-tuning funciona mejor cuando train ≈ pretraining distribution\n",
+    "# - Papers muestran que \"less is more\" en preprocesamiento para transformers\n",
+    "#\n",
+    "# Referencias:\n",
+    "# - \"To Tune or Not to Tune?\" (Dodge et al., 2020): menos preprocessing = mejor\n",
+    "# - BETO paper: recomienda texto \"natural\" sin normalización agresiva\n",
+    "#\n",
+    "# ===============================================================\n",
+    "\n",
     "import pandas as pd, re, unicodedata\n",
     "\n",
-    "# === CARGAR SPLITS UNIFICADOS ===\n",
-    "SPLITS_PATH = DATA_PATH / \"splits\"\n",
+    "# Cargar splits unificados desde 02_create_splits.ipynb\n",
     "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
     "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "print(f\"✅ Splits cargados: Train={len(train_indices)} | Val={len(val_indices)}\")\n",
+    "print(f\"✅ Splits cargados desde {SPLITS_PATH}/:\")\n",
+    "print(f\"   Train: {len(train_indices)} ejemplos\")\n",
+    "print(f\"   Val:   {len(val_indices)} ejemplos\")\n",
+    "print(f\"   Total: {len(dataset_base)} ejemplos en dataset_base.csv\")\n",
     "\n",
-    "text_col  = _guess_text_col(dataset_base)\n",
+    "# Detectar columnas automáticamente\n",
+    "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
+    "print(f\"\\n📋 Columnas detectadas: texto='{text_col}', label='{label_col}'\")\n",
     "\n",
-    "# Transformer: conservador (mantener tildes/casing; sólo alargamientos/espacios)\n",
-    "RE_MULTI = re.compile(r'(.)\\1{2,}')\n",
+    "# Definir función de limpieza conservadora\n",
+    "RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
+    "\n",
     "def clean_text_trf(s: str) -> str:\n",
-    "    if pd.isna(s): return \"\"\n",
+    "    \"\"\"\n",
+    "    Limpieza CONSERVADORA para transformers (mínimo preprocesamiento).\n",
+    "    \n",
+    "    Aplica ÚNICAMENTE:\n",
+    "    - Normalización NFC (forma canónica de tildes)\n",
+    "    - Colapso de alargamientos (holaaa → holaa)\n",
+    "    - Normalización de espacios\n",
+    "    \n",
+    "    Preserva:\n",
+    "    - Mayúsculas y minúsculas (BETO las usa)\n",
+    "    - Tildes y acentos (parte del vocabulario)\n",
+    "    - Puntuación (señal contextual)\n",
+    "    - Estructura original del texto\n",
+    "    \"\"\"\n",
+    "    if pd.isna(s):\n",
+    "        return \"\"\n",
+    "    \n",
     "    s = str(s).strip()\n",
-    "    s = unicodedata.normalize(\"NFC\", s)\n",
-    "    s = RE_MULTI.sub(r'\\1\\1', s)\n",
-    "    s = re.sub(r\"\\s+\", \" \", s).strip()\n",
+    "    s = unicodedata.normalize(\"NFC\", s)  # Normaliza tildes (é = é, no e + ´)\n",
+    "    s = RE_MULTI.sub(r'\\1\\1', s)         # holaaa → holaa (evita OOV)\n",
+    "    s = re.sub(r\"\\s+\", \" \", s).strip()   # Colapsa espacios múltiples\n",
+    "    \n",
     "    return s\n",
     "\n",
+    "# Aplicar limpieza conservadora\n",
     "dataset_base['texto_trf'] = dataset_base[text_col].map(clean_text_trf)\n",
-    "label2id = {'depresion':0, 'ansiedad':1}\n",
-    "dataset_base['label'] = dataset_base[label_col].map(label2id)\n",
+    "\n",
+    "print(f\"\\n🧹 Aplicado preprocesamiento conservador (preserva tildes/mayúsculas/puntuación)\")\n",
+    "print(f\"   Ejemplo antes: {dataset_base[text_col].iloc[0][:80]}...\")\n",
+    "print(f\"   Ejemplo después: {dataset_base['texto_trf'].iloc[0][:80]}...\")\n",
     "\n",
     "# Separar train y val usando índices guardados\n",
-    "train_df = dataset_base[dataset_base['row_id'].isin(train_indices)][['texto_trf','label']].copy()\n",
-    "val_df = dataset_base[dataset_base['row_id'].isin(val_indices)][['texto_trf','label']].copy()\n",
+    "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
+    "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
-    "print(f\"Train: {len(train_df)} | Val: {len(val_df)}\")\n",
-    "print(f\"Train distribución:\\n{train_df['label'].value_counts()}\")\n",
-    "print(f\"Val distribución:\\n{val_df['label'].value_counts()}\")"
+    "X_train, y_train = df_train['texto_trf'], df_train[label_col]\n",
+    "X_val, y_val = df_val['texto_trf'], df_val[label_col]\n",
+    "\n",
+    "print(f\"\\n📊 Splits creados:\")\n",
+    "print(f\"\\nTrain ({len(df_train)} ejemplos):\")\n",
+    "train_dist = y_train.value_counts()\n",
+    "for label, count in train_dist.items():\n",
+    "    print(f\"   {label}: {count}\")\n",
+    "\n",
+    "print(f\"\\nVal ({len(df_val)} ejemplos):\")\n",
+    "val_dist = y_val.value_counts()\n",
+    "for label, count in val_dist.items():\n",
+    "    print(f\"   {label}: {count}\")"
    ]
   },
   {
@@ -170,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6298d69f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd95429d22424b9591350792465fba6d",
+       "model_id": "5abefe958d6a45039b1b789869ee7a2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "140e184e9dc1461ba21f6720a0ff3a0f",
+       "model_id": "6134a885cb594cb18f4d26547fe9acb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "330e270a",
    "metadata": {},
    "outputs": [
@@ -252,7 +377,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [471/471 08:29, Epoch 3/3]\n",
+       "      [471/471 07:45, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -268,27 +393,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.288600</td>\n",
-       "      <td>0.270351</td>\n",
-       "      <td>0.849325</td>\n",
-       "      <td>0.851619</td>\n",
-       "      <td>0.847144</td>\n",
+       "      <td>0.290300</td>\n",
+       "      <td>0.271076</td>\n",
+       "      <td>0.844760</td>\n",
+       "      <td>0.844227</td>\n",
+       "      <td>0.845301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.195900</td>\n",
-       "      <td>0.292822</td>\n",
-       "      <td>0.855089</td>\n",
-       "      <td>0.876518</td>\n",
-       "      <td>0.839865</td>\n",
+       "      <td>0.193200</td>\n",
+       "      <td>0.296221</td>\n",
+       "      <td>0.861379</td>\n",
+       "      <td>0.882152</td>\n",
+       "      <td>0.846407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.117500</td>\n",
-       "      <td>0.332661</td>\n",
-       "      <td>0.878105</td>\n",
-       "      <td>0.881242</td>\n",
-       "      <td>0.875154</td>\n",
+       "      <td>0.113500</td>\n",
+       "      <td>0.309758</td>\n",
+       "      <td>0.883722</td>\n",
+       "      <td>0.887585</td>\n",
+       "      <td>0.880129</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -384,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "6178f168",
    "metadata": {},
    "outputs": [
